[project]
name = "usat_designer_common"
authors = [
    { name = "James Bedson" }
]
version = "0.1.0"
description = "Common utilities for the USAT Designer Project"
requires-python = ">=3.9"

dependencies = [
    "universal_transcoder @ git+https://github.com/JamesBedson/universal_transcoder.git"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]